// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component MenuDrawer should render CRICOS footer 1`] = `null`;

exports[`Component MenuDrawer should render empty drawer 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  id="menudrawer"
  onClose={[MockFunction]}
  open={false}
  variant="temporary"
/>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  id="menudrawer"
  onClose={[MockFunction]}
  open={true}
  variant="temporary"
>
  <WithStyles(ForwardRef(List))
    component="nav"
    id="mainMenu"
    tabIndex={-1}
  >
    <WithStyles(ForwardRef(Grid))
      alignContent="center"
      alignItems="center"
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
      spacing={0}
      wrap="nowrap"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={12}
        xs={10}
        zeroMinWidth={true}
      >
        <WithStyles(ExternalLink)
          className="noHover"
          href="test"
          openInNewIcon={false}
          title="test"
        >
          <div
            className="test"
            style={
              Object {
                "height": 50,
                "margin": "8px auto",
                "width": 160,
              }
            }
          >
            test
          </div>
        </WithStyles(ExternalLink)>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smUp={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={2}
        >
          <WithStyles(ForwardRef(IconButton))
            aria-label="Close menu"
            onClick={[MockFunction]}
          >
            <Memo(ForwardRef(KeyboardArrowLeftIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </WithStyles(ForwardRef(Grid))>
      </Hidden>
    </WithStyles(ForwardRef(Grid))>
    <span
      className="menu-item-container"
      key="menu-item-0"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        id="menu-item-0"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": undefined,
              "secondary": undefined,
            }
          }
          primary="Primary text 0"
          secondary="secondary text 0"
        />
      </WithStyles(ForwardRef(ListItem))>
    </span>
    <WithStyles(ForwardRef(Divider))
      key="menu_item_1"
    />
    <span
      className="menu-item-container"
      key="menu-item-2"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        id="menu-item-2"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": undefined,
              "secondary": undefined,
            }
          }
          primary="Primary text 1"
          secondary="secondary text 1"
        />
      </WithStyles(ForwardRef(ListItem))>
    </span>
  </WithStyles(ForwardRef(List))>
  <div
    id="afterMenuDrawer"
    tabIndex={-1}
  />
  <div>
    CRICOS Provider No: 
    <WithStyles(ExternalLink)
      href="http://www.uq.edu.au/about/cricos-link"
      openInNewIcon={false}
      title="CRICOS Provider No: "
    >
      00025B
    </WithStyles(ExternalLink)>
  </div>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider and skip nav button 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  id="menudrawer"
  onClose={[MockFunction]}
  open={true}
  variant="permanent"
>
  <WithStyles(ForwardRef(List))
    component="nav"
    id="mainMenu"
    tabIndex={-1}
  >
    <WithStyles(ForwardRef(Grid))
      alignContent="center"
      alignItems="center"
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
      spacing={0}
      wrap="nowrap"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={12}
        xs={10}
        zeroMinWidth={true}
      >
        <WithStyles(ExternalLink)
          className="noHover"
          href="test"
          openInNewIcon={false}
          title="test"
        >
          <div
            className="test"
            style={
              Object {
                "height": 50,
                "margin": "8px auto",
                "width": 160,
              }
            }
          >
            test
          </div>
        </WithStyles(ExternalLink)>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smUp={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={2}
        >
          <WithStyles(ForwardRef(IconButton))
            aria-label="Close menu"
            onClick={[MockFunction]}
          >
            <Memo(ForwardRef(KeyboardArrowLeftIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </WithStyles(ForwardRef(Grid))>
      </Hidden>
    </WithStyles(ForwardRef(Grid))>
    <div
      aria-label="Skip navigation"
      id="skipNav"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={1}
      type="button"
    >
      <WithStyles(ForwardRef(Button))
        className="skipNavButton"
        color="primary"
        onClick={[Function]}
        tabIndex={-1}
        variant="contained"
      >
        Skip navigation
      </WithStyles(ForwardRef(Button))>
    </div>
    <span
      className="menu-item-container"
      key="menu-item-0"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        id="menu-item-0"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": undefined,
              "secondary": undefined,
            }
          }
          primary="Primary text 0"
          secondary="secondary text 0"
        />
      </WithStyles(ForwardRef(ListItem))>
    </span>
    <WithStyles(ForwardRef(Divider))
      key="menu_item_1"
    />
    <span
      className="menu-item-container"
      key="menu-item-2"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        id="menu-item-2"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": undefined,
              "secondary": undefined,
            }
          }
          primary="Primary text 1"
          secondary="secondary text 1"
        />
      </WithStyles(ForwardRef(ListItem))>
    </span>
  </WithStyles(ForwardRef(List))>
  <div
    id="afterMenuDrawer"
    tabIndex={-1}
  />
  <div>
    CRICOS Provider No: 
    <WithStyles(ExternalLink)
      href="http://www.uq.edu.au/about/cricos-link"
      openInNewIcon={false}
      title="CRICOS Provider No: "
    >
      00025B
    </WithStyles(ExternalLink)>
  </div>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider and skip nav button 2`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  classes={
    Object {
      "docked": undefined,
      "paper": undefined,
      "paperAnchorDockedLeft": undefined,
    }
  }
  id="menudrawer"
  onClose={[MockFunction]}
  open={true}
  variant="permanent"
>
  <WithStyles(ForwardRef(List))
    component="nav"
    id="mainMenu"
    tabIndex={-1}
  >
    <WithStyles(ForwardRef(Grid))
      alignContent="center"
      alignItems="center"
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
      spacing={0}
      wrap="nowrap"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={12}
        xs={10}
        zeroMinWidth={true}
      >
        <WithStyles(ExternalLink)
          className="noHover"
          href="test"
          openInNewIcon={false}
          title="test"
        >
          <div
            className="test"
            style={
              Object {
                "height": 50,
                "margin": "8px auto",
                "width": 160,
              }
            }
          >
            test
          </div>
        </WithStyles(ExternalLink)>
      </WithStyles(ForwardRef(Grid))>
      <Hidden
        smUp={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={2}
        >
          <WithStyles(ForwardRef(IconButton))
            aria-label="Close menu"
            onClick={[MockFunction]}
          >
            <Memo(ForwardRef(KeyboardArrowLeftIcon)) />
          </WithStyles(ForwardRef(IconButton))>
        </WithStyles(ForwardRef(Grid))>
      </Hidden>
    </WithStyles(ForwardRef(Grid))>
    <div
      aria-label="Skip navigation"
      id="skipNav"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={1}
      type="button"
    >
      <WithStyles(ForwardRef(Button))
        className="skipNavButton"
        color="primary"
        onClick={[Function]}
        tabIndex={-1}
        variant="contained"
      >
        Skip navigation
      </WithStyles(ForwardRef(Button))>
    </div>
    <span
      className="menu-item-container"
      key="menu-item-0"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        id="menu-item-0"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": undefined,
              "secondary": undefined,
            }
          }
          primary="Primary text 0"
          secondary="secondary text 0"
        />
      </WithStyles(ForwardRef(ListItem))>
    </span>
    <WithStyles(ForwardRef(Divider))
      key="menu_item_1"
    />
    <span
      className="menu-item-container"
      key="menu-item-2"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        id="menu-item-2"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": undefined,
              "secondary": undefined,
            }
          }
          primary="Primary text 1"
          secondary="secondary text 1"
        />
      </WithStyles(ForwardRef(ListItem))>
    </span>
  </WithStyles(ForwardRef(List))>
  <div
    id="afterMenuDrawer"
    tabIndex={-1}
  />
  <div>
    CRICOS Provider No: 
    <WithStyles(ExternalLink)
      href="http://www.uq.edu.au/about/cricos-link"
      openInNewIcon={false}
      title="CRICOS Provider No: "
    >
      00025B
    </WithStyles(ExternalLink)>
  </div>
</WithStyles(ForwardRef(Drawer))>
`;
